{
    "name": "FlyControls",
    "maps": [
        {
            "name": "FlyModel",
            "id": "fe97e9a9-7e68-4479-be7f-b733c928597c",
            "actions": [
                {
                    "name": "FirstItemFunction",
                    "type": "Button",
                    "id": "e0a49c30-8c7f-4f28-a069-1b6992913c82",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveToPoint",
                    "type": "Button",
                    "id": "f41eb743-f792-4975-9f72-acf421fef297",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SecondtemFunction",
                    "type": "Button",
                    "id": "2afa2bd6-d795-4078-b2eb-dcaab6bc956b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "f226a251-7612-46f9-9164-957db6265c00",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LookRotation",
                    "type": "Value",
                    "id": "13923fc0-0830-42c9-9976-a678ca686855",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ChangeAltitude",
                    "type": "Value",
                    "id": "ef1addd1-2046-4a16-a4d9-aa3c98cbe767",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e0172ed8-fd09-44ff-9f39-fb23bb4c8d48",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FirstItemFunction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "94657346-adeb-4f28-bf12-f13d6ecbbd29",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondtemFunction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "17d7f5b7-afab-4d5b-8a0c-0391d696f163",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "03b17156-7c7f-45ae-acf5-cdc8714a34b3",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "cbb8019a-d23d-4dc1-8d5d-cf54d421046b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "910c7ec9-6526-4c39-850b-222899a5cf28",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "16fc116d-4456-47e5-8575-c55524884e18",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "4bca703a-b9f7-4071-a92f-5f7441e90fbe",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "2750746b-01e6-43e8-90f3-4caf711df307",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeAltitude",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "0dec5c66-baf9-416b-a5f4-bee3b41172c7",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeAltitude",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "65e4884e-f00c-4388-baf4-cae9e4ba5cf0",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeAltitude",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "7917a134-d6e8-453f-ba0c-18a3f6a67a1b",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveToPoint",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}